ejs分离header 和　footer部分

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "ejs": "^2.4.1",
     "jade": "^1.11.0",
     "koa": "^1.2.0",
-    "koa-router": "^5.4.0"
+    "koa-router": "^5.4.0",
+    "koa-static": "^2.0.0",
+    "normalize.css": "^3.0.3"
   }
 }
